# Obsidian-PaperBell

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  content  makefile  mkdocs.yml  package-lock.json  package.json  pyproject.toml  quartz.config.ts  release-please-config.json
.github/: FUNDING.yml
.github/workflows/: release-please.yml
.swm/: new-testing-doc.ew93afsm.sw.md  readme.ifkoqk01.sw.md  scholar.1qh4zo7q.sw.md  swimm.json
PaperBell/: Design concepts.md  Features Road Maps.md  README.md  index.md  longform-sessions.json  完善路线.md  快速开始.md  是否适用于你.md  设计理念.md
PaperBell/.obsidian/: app.json  appearance.json  command-palette.json  community-plugins.json  core-plugins-migration.json  core-plugins.json  daily-notes.json  graph.json  page-preview.json  query.json  types.json  workspace.json  workspaces.json
PaperBell/.obsidian/snippets/: 【AD优化】admonitions.css  【主页设置】homepage setting.css  【侧边栏播放器图标】rightlane music player icon.css  【卡片框】callout.css  (+6 more)
PaperBell/.pandoc/: zotero-library-1.json
PaperBell/40 - Obsidian/: mybib.bib
PaperBell/Cards/: 00. 概念墙.md  DataCore检索.md  概念墙.md
PaperBell/Inputs/: 00. 图书馆.md
PaperBell/Locations/: 00. 机构列表.md
PaperBell/Outputs/: PaperBell仓库使用的插件及其作用一览.md  index.md  使用PaperBell整理输出笔记.md  使用PaperBell管理项目.md  使用PaperBell进行日常记录.md  使用PaperBell阅读与整理资料.md  关于科研生活的探讨.md  多主体建模的包.md  引言讨论.md  数据方法.md  结果探讨.md  设计理念.md
PaperBell/Persons/: 00. 学者列表.md  个人履历.md  学者列表.md
PaperBell/Projects/: ABSESpy.md  PaperBell.md
docs/swm/: README.md
scripts/: check_obsidian_links.py
(+246 files in other folders)
