[tool.poetry]
name = "paperbell"
version = "0.2.2"
description = "An obsidian template vault for tracking your academic life."
authors = ["SongshGeo <songshgeo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
scriv = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.scriv]
version = "literal: pyproject.toml: tool.poetry.version"
format = "md"
